<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">木雨音乐</string>
    <string name="my_like_table">我喜欢的</string>
    <string name="record_music_table">最近播放</string>
    <string name="action_contact">Contact</string>

    <string name="random_play">随机播放</string>
    <string name="order_play">顺序播放</string>
    <string name="single_play">单曲循环</string>
    <string name="my_music">本地音乐</string>
    <string name="net_music">网络推荐</string>
    <string name="like_music">我喜欢</string>
    <string name="likes_music">点击任一歌曲可以播放您喜欢的歌曲列表</string>
    <string name="record_music">最近播放会记录您最近通过的10首歌曲</string>
    <string name="no_data">最近没有播放记录</string>
    <string name="no_data2">还没有喜欢的歌曲</string>
    <string name="recently_music">最近播放</string>
    <string name="about">问题与声明</string>
    <string name="delete_list">清空列表</string>
    <string name="exit">退出</string>
    <string name="newMyMusic">刷新</string>
    <string name="info">操作:</string>
    <string name="prompt">温馨提示</string>
    <string name="dialog_messenge">你确定要退出程序吗？</string>
    <string name="cancel">取消</string>
    <string name="confrim">确定</string>
    <string name="operation">将此歌曲处理为</string>

    <string name="music_name">歌 名</string>
    <string name="music_lrc">歌词</string>
    <string name="music_start_time">00:00</string>
    <string name="music_end_time">00:00</string>
    <string name="about1">问题与声明</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>