<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/newMyMusic"
        android:title="@string/newMyMusic"
        android:orderInCategory="100"
        android:icon="@android:drawable/ic_menu_rotate"
        android:showAsAction="ifRoom"/>
    <item
        android:id="@+id/ilike"
        android:orderInCategory="200"
        android:title="@string/like_music"
        app:showAsAction="ifRoom"
        android:icon="@android:drawable/ic_menu_set_as"/>
    <item
        android:id="@+id/near_play"
        android:orderInCategory="300"
        android:title="@string/recently_music"
        app:showAsAction="ifRoom"
        android:icon="@android:drawable/ic_media_play"/>
    <item
        android:id="@+id/about"
        android:orderInCategory="400"
        android:title="@string/about"
        app:showAsAction="ifRoom"
        android:icon="@android:drawable/ic_media_play"/>
    <item
        android:id="@+id/exit"
        android:orderInCategory="500"
        android:title="@string/exit"
        app:showAsAction="ifRoom"
        android:icon="@android:drawable/ic_media_play"/>

</menu>